# GS-tools-django

./: .bash_history  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .python_history  .ruff.toml  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
docker/celery/: start-celery.sh
docker/django/: entrypoint.sh
gs_tools_django/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
gs_tools_django/authentication/: apps.py  managers.py  models.py  querysets.py  serializers.py  tasks.py  urls.py  views.py
gs_tools_django/authentication/migrations/: 0001_initial.py  0002_alter_smsloginrequest_code.py  0003_alter_smsloginrequest_code.py  0004_alter_smsloginrequest_code.py  0005_alter_smsloginrequest_code.py  0006_alter_smsloginrequest_code.py  0007_alter_smsloginrequest_code.py  0008_alter_smsloginrequest_code.py  0009_alter_smsloginrequest_code.py  0010_alter_smsloginrequest_code.py  0011_alter_smsloginrequest_code.py  (+12 more)
gs_tools_django/core/: apps.py  pagination.py  validators.py
gs_tools_django/files/: apps.py  factories.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
gs_tools_django/products/: apps.py  urls.py
gs_tools_django/profiles/: apps.py  managers.py  models.py  querysets.py  serializers.py  urls.py  views.py
gs_tools_django/settings/: __init__.py  cache.py  celery.py  database.py  django.py  drf.py  email.py  files.py  localization.py  rabbitmq.py  redis.py  security.py  shared.py
gs_tools_django/users/: apps.py  factories.py  managers.py  models.py  querysets.py  serializers.py  urls.py  views.py
(+81 files in other folders)
